--- a/index.html
+++ b/index.html
@@ -85,18 +85,9 @@
 					<li><a href="#asso______" class="active">L'asso</a></li>
 					<li><a href="#actions___">Actions</a></li>
 					<li><a href="#evenements">Evenements</a></li>
-					<li><a href="#crapbook__">
-						<span class="fab fa-facebook-square"></span>
-					</a></li>
-					<li><a href="mailto:a.p.e.e.p.la.marelle+web@gmail.com" title="nous écrire">
-						<span class="fas fa-envelope"></span>
-					</a></li>
-					<li><a href="https://lamarellepeillac.toutemonecole.fr/" title="site de l'école">
-						<span class="fas fa-chalkboard-teacher"></span>
-					</a></li>
-					<li><a href="https://www.education.gouv.fr/annuaire/56-morbihan/peillac/etab/ecole-primaire-publique-la-marelle.html" title="page web de l'éducation nationale">
-						<span class="fas fa-landmark"></span>
-					</a></li>
+					<li><a href="#crapbook__"><span class="fab fa-facebook-square"></span></a></li>
+					<li><a href="mailto:a.p.e.e.p.la.marelle+web@gmail.com" title="nous écrire"><span class="fas fa-envelope"></span></a></li>
+
 				</ul>
 				<!-- Mobile menu -->
 				<a class="mobile-menu-toggle"></a>
@@ -104,10 +95,8 @@
 					<li><a href="#asso______">L'asso</a></li>
 					<li><a href="#actions___">Actions</a></li>
 					<li><a href="#evenements">Evenements</a></li>
-					<li><a href="#crapbook__"><span class="fab fa-facebook-square"></span></a></li>
 					<li><a href="mailto:a.p.e.e.p.la.marelle+web@gmail.com" title="nous écrire"><span class="fas fa-envelope"></span></a></li>
-					<li><a href="https://lamarellepeillac.toutemonecole.fr/" title="site de l'école"><span class="fas fa-chalkboard-teacher"></span></a></li>
-					<li><a href="https://www.education.gouv.fr/annuaire/56-morbihan/peillac/etab/ecole-primaire-publique-la-marelle.html" title="page web de l'éducation nationale"><span class="fas fa-landmark"></span></a></li>
+
 				</ul>
 			</div>
 		</nav>
@@ -138,8 +127,8 @@
 						</ul>
 						<h3 class="sidebar-category">Liens utiles</h3>
 						<ul class="sidebar-links">
-							<li><a href="#">Site de l'école</a></li>
-							<li><a href="#">Page institutionnelle de l'école</a></li>
+							<li>><a href="https://lamarellepeillac.toutemonecole.fr/" title="site de l'école">Site de l'école</a></li>
+							<li><a href="https://www.education.gouv.fr/annuaire/56-morbihan/peillac/etab/ecole-primaire-publique-la-marelle.html" title="page web de l'éducation nationale"><span class="fas fa-landmark">Page institutionnelle de l'école</a></li>
 							<li><a href="#">Cccc3</a></li>
 						</ul>
 						<!-- Modèle vierge
