--- a/index.html
+++ b/index.html
@@ -107,17 +107,18 @@
 					<div class="sidebar sidebar-left">
 						<h3 class="sidebar-category">L'association</h3>
 						<ul class="sidebar-links">
-							<li><a href="#">Notre misison</a></li>
-							<li><a class="active" href="#">Nos membres</a></li>
-							<li><a href="#">Nous rejoindre</a></li>
+							<li><a href="#"><i class="fas fa-signal"></i> Notre misison</a></li>
+							<li><a class="active" href="#"><i class="fas fa-address-book"></i> Nos membres</a></li>
+							<li><a href="#"><i class="fas fa-sign-in-alt"></i> Nous rejoindre</a></li>
 						</ul>
 						<h3 class="sidebar-category">Les évenements</h3>
 						<ul class="sidebar-links">
-							<li><a href="#">Marché de Noël</a></li>
-							<li><a href="#">Fête de l'école</a></li>
-							<li><a href="#">Foire annuelle</a></li>
-							<li><a href="#">Tombola</a></li>
-							<li><a href="#">La fête des fruits d'automne</a></li>
+							<li><a href="#"><i class="fas fa-gifts"></i> Marché de Noël</a></li>
+							<li><a href="#"><i class="fas fa-school"></i> Fête de l'école</a></li>
+							<li><a href="#"><i class="fas fa-handshake"></i> Foire annuelle</a></li>
+							<li><a href="#"><i class="fas fa-dice"></i> Tombola</a></li>
+							<li><a href="#"><i class="fas fa-apple-alt"></i> La fête des fruits d'automne</a></li>
+							<li><a href="#"><i class="fas fa-list"></i> Autres</a></li>
 						</ul>
 						<h3 class="sidebar-category">Nos copains</h3>
 						<ul class="sidebar-links">
@@ -127,9 +128,9 @@
 						</ul>
 						<h3 class="sidebar-category">Liens utiles</h3>
 						<ul class="sidebar-links">
-							<li>><a href="https://lamarellepeillac.toutemonecole.fr/" title="site de l'école">Site de l'école</a></li>
-							<li><a href="https://www.education.gouv.fr/annuaire/56-morbihan/peillac/etab/ecole-primaire-publique-la-marelle.html" title="page web de l'éducation nationale"><span class="fas fa-landmark">Page institutionnelle de l'école</a></li>
-							<li><a href="#">Cccc3</a></li>
+							<li><a href="https://lamarellepeillac.toutemonecole.fr/" title="site de l'école"><span class="fas fa-chalkboard-teacher"></span> Site de l'école</a></li>
+							<li><a href="https://www.education.gouv.fr/annuaire/56-morbihan/peillac/etab/ecole-primaire-publique-la-marelle.html" title="page web de l'éducation nationale"><span class="fas fa-landmark"></span> Page institutionnelle de l'école</a></li>
+							<li><a href="https://www.education.gouv.fr/calendrier-scolaire"><span class="fas fa-calendar-alt"></span> Calendrier des vacances</a></li>
 						</ul>
 						<!-- Modèle vierge
 						<h3 class="sidebar-category">Nos copains</h3>
@@ -143,7 +144,7 @@
 				</div>
 
 				<article class="col col-md-7 col-lg-7">
-					<section>
+					<section class="section-tertiary">
 						<h3>L'APEEP c'est...</h3>
 						<p>
 						Préparer et planifier des réunions, poser des dates, faire des relances, rire, éplucher des légumes, faire des tableaux, des listes, des gâteaux, trouver des sponsors, imprimer des mots, des tickets de tombola, les distribuer, décorer des salles, aller chercher des clés, faire des affiches, passer un moment assit à papoter, monter des scènes, être en lien avec l’équipe pédagogique, les délégués de parents, imaginer des moments conviviaux, trouver des lots, partir en ballade, chanter, installer une sono, des lumières, des tables , des chaises, découvrir de nouvelles personnes, partager, voir les enfants jouer ensemble, créer des moments de joie...
@@ -151,7 +152,7 @@
 						C’est l’association de TOUS les parents de l’école.
 						</p>
 					</section>
-					<section>
+					<section class="section-secondary">
 						<h3>Sa vocation …</h3>
 						<ul>
 							<li>Créer des rencontres et du lien entre les familles</li>
@@ -161,13 +162,13 @@
 							<li>Venir en aide aux familles</li>
 						</ul>
 					</section>
-					<section>
+					<section class="section-tertiary">
 						<h3>Fonctionnement</h3>
 						<p>
 						Tous les membres du bureau sont ENGAGES et RESPONSABLES en fonction de leurs ENVIES et POSSIBILITÉS ( on n’a jamais jugé personne, chacun fait ce qu’il peut/veut dans la mesure où il accompli ce sur quoi il s’est engagé. Ca peut être juste une mission express, ou un investissement plus prenant. )
 						</p>
 					</section>
-					<section>
+					<section class="section-secondary">
 
 						<h3>Réunions régulières</h3>
 						<ul>
@@ -175,7 +176,7 @@
 							<li>ou en commission sur un thème précis</li>
 						</ul>
 					</section>
-					<section>
+					<!--<section class="section-tertiary">
 
 						<h3>QUI FAIT PARTIE DU BUREAU ?</h3>
 						<ul>
@@ -190,8 +191,8 @@
 							<li class="arc_en_ciel_apeep_9">Sascha H</li>
 							<li>Et toi, tu viens ??</li>
 						</ul>
-					</section>
-					<section>
+					</section>-->
+					<section class="section-secondary">
 
 						<h3>La communication en interne :</h3>
 						<ul>
@@ -202,7 +203,7 @@
 							<li>un site web : nom de domain à décider</li>
 						</ul>
 					</section>
-					<section>
+					<section class="section-tertiary">
 
 						<h3>Les commissions existantes</h3>
 						<p>
@@ -215,7 +216,7 @@
 							<li>cantine scolaire</li>
 						</ul>
 					</section>
-					<section>
+					<section class="section-secondary">
 
 						<h3>Normalement, une année avec l' APEEP c'est …</h3>
 						<ul>
@@ -243,7 +244,7 @@
 						On a donc besoin de vous pour inventer l’avenir de l’APEEP, une heure, un jour, par-ci-par-là, ou plus si ça vous met en joie ! 
 						</p>
 					</section>
-					<section>
+					<section class="section-tertiary">
 						<h3>REJOIGNEZ NOUS !</h3>
 						<p>
 							Si chacun fait un peu, personne ne fera beaucoup !
